fixed weird spacing for titles

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -97,8 +97,8 @@ a.social-link:hover {
 }
 
 .container-fluid {
-	padding-left: 5%;
-	padding-top: 2.5%;
+	padding-left: 20px;
+	padding-top: 20px;
 }
 
 .nav-link:hover {
